[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twenty48game"
version = "0.0.1"
authors = [
  { name="Kyle McMaster", email="kyle.mcmaster02@gmail.com" },
]
description = "2048 game designed for use with AI players."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KyleJMcMaster/twenty48game"
"Bug Tracker" = "https://github.com/KyleJMcMaster/twenty48game/issues"